--- a/SeleniumTestNG/test-output/old/Default suite/classes.html
+++ b/SeleniumTestNG/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>menuElements</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>findelements</td>
 <td>&nbsp;</td></tr>
 <tr>
