--- a/SeleniumTestNG/test-output/old/Default suite/methods.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a697e7">  <td>23/09/13 16:10:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@35d019a3]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/13 16:10:21</td>   <td>5205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@35d019a3]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>23/09/13 16:10:20</td>   <td>4610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindElementsSample.findelements()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@35d019a3]">findelements</td> 
-  <td>main@2106000623</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/13 22:20:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindElementsSample.findelements()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">findelements</td> 
+  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/13 22:20:38</td>   <td>3614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/13 22:20:34</td>   <td>405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/13 22:20:34</td>   <td>405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/13 22:20:38</td>   <td>3614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1010670443</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/13 22:20:37</td>   <td>3081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FindElementsSample.menuElements()[pri:0, instance:com.obsquara.SeleniumTestNG.FindElementsSample@49e53c76]">menuElements</td> 
+  <td>main@1010670443</td>   <td></td> </tr>
 </table>
