--- a/SeleniumTestNG/test-output/old/Default suite/classes.html
+++ b/SeleniumTestNG/test-output/old/Default suite/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SeleniumTestNG.AnnotationScenario</td>
+<td>com.obsquara.SeleniumTestNG.WebTable</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testCase1</td>
+<td>identifyName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tableList</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -32,13 +32,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>driverQuit</td>
+<td>driverCloseOrQuit</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterclass</td>
-<td>&nbsp;</td></tr>
 </table>
