--- a/SeleniumTestNG/test-output/old/Default suite/methods.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationScenario.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:43</td>   <td>7138</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationScenario.afterclass()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:43</td>   <td>6809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationScenario.driverQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&lt;&lt;driverQuit</td> 
-<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:43</td>   <td>7139</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationScenario.afterTest()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:43</td>   <td>7196</td> <td title="&lt;&lt;AnnotationScenario.afterSuit()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&lt;&lt;afterSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:36</td>   <td>-63</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationScenario.beforeTest()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:40</td>   <td>4251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationScenario.testCase1()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">testCase1</td> 
-  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:36</td>   <td>-77</td> <td title="&gt;&gt;AnnotationScenario.beforeSuit()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/14 20:05:36</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationScenario.beforeClass()[pri:0, instance:com.obsquara.SeleniumTestNG.AnnotationScenario@5fe94a96]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/14 22:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/14 22:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/14 22:48:13</td>   <td>-3848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/14 22:48:12</td>   <td>-5149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTable.identifyName()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">identifyName</td> 
+  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>23/09/14 22:48:13</td>   <td>-3848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/14 22:48:16</td>   <td>-924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTable.tableList()[pri:0, instance:com.obsquara.SeleniumTestNG.WebTable@49e53c76]">tableList</td> 
+  <td>main@2044215423</td>   <td></td> </tr>
 </table>
