--- a/SeleniumTestNG/test-output/index.html
+++ b/SeleniumTestNG/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--516928635\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1046156916\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SeleniumTestNG.Assertion" class="method navigator-link" hash-for-method="verifyShowButtontext">verifyShowButtontext</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SeleniumTestNG.TestcasesObsquara" class="method navigator-link" hash-for-method="xpathTestcase">xpathTestcase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.obsquara.SeleniumTestNG.Assertion</span>
+              <span class="class-name">com.obsquara.SeleniumTestNG.TestcasesObsquara</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyShowButtontext">
-                  </a> <!-- verifyShowButtontext -->
-                  <span class="method-name">verifyShowButtontext</span>
+                  <a name="xpathTestcase">
+                  </a> <!-- xpathTestcase -->
+                  <span class="method-name">xpathTestcase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--516928635\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1046156916\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.obsquara.SeleniumTestNG.Assertion&quot;&gt;
+      &lt;class name=&quot;com.obsquara.SeleniumTestNG.TestcasesObsquara&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyShowButtontext&quot;/&gt;
+          &lt;include name=&quot;xpathTestcase&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.obsquara.SeleniumTestNG.Assertion --&gt;
+      &lt;/class&gt; &lt;!-- com.obsquara.SeleniumTestNG.TestcasesObsquara --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyShowButtontext')
-data.setCell(0, 2, 'com.obsquara.SeleniumTestNG.Assertion')
-data.setCell(0, 3, 54);
+data.setCell(0, 1, 'xpathTestcase')
+data.setCell(0, 2, 'com.obsquara.SeleniumTestNG.TestcasesObsquara')
+data.setCell(0, 3, 224);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 ms</span>
+              <span class="suite-total-time">Total running time: 224 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,25 +214,19 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">7 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.obsquara.SeleniumTestNG.Assertion</span>
+              <span class="ignored-class-name">com.obsquara.SeleniumTestNG.TestcasesObsquara</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">assertNotNullSample</span>
+                <span class="ignored-method-name">classAndId</span>
                 <br/>
-                <span class="ignored-method-name">assertsEqualsSingleinputform</span>
+                <span class="ignored-method-name">verifyShowButtonAlignment</span>
                 <br/>
-                <span class="ignored-method-name">softAssert</span>
+                <span class="ignored-method-name">idButtonTestcase</span>
                 <br/>
-                <span class="ignored-method-name">notEqualSample</span>
-                <br/>
-                <span class="ignored-method-name">assertNullSample</span>
-                <br/>
-                <span class="ignored-method-name">asserTrueRadioButtonM</span>
-                <br/>
-                <span class="ignored-method-name">assertFalsRadiobuttonDisable</span>
+                <span class="ignored-method-name">cssSelectorTestcase</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -244,18 +238,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.obsquara.SeleniumTestNG.Assertion</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.obsquara.SeleniumTestNG.TestcasesObsquara</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">instilBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyShowButtontext</span>
-                <span class="method-start">4750 ms</span>
+                <span class="method-name">xpathTestcase</span>
+                <span class="method-start">5209 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">driverCloseOrQuit</span>
-                <span class="method-start">4807 ms</span>
+                <span class="method-start">5438 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
