--- a/SevenRMart/test-output/emailable-report.html
+++ b/SevenRMart/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,689</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,492</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.obsquara.SevenRMart.SevenRMart</td><td><a href="#m0">sevenrmartAdminLogin</a></td><td rowspan="1">1695216620957</td><td rowspan="1">940</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.obsquara.SevenRMart.testscript.LoginTest</td><td><a href="#m0">verifyInvalidUserNameAndInvalidPassword</a></td><td rowspan="1">1695304693712</td><td rowspan="1">891</td></tr><tr class="passedeven"><td><a href="#m1">verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</a></td><td rowspan="1">1695304696786</td><td rowspan="1">627</td></tr><tr class="passedeven"><td><a href="#m2">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</a></td><td rowspan="1">1695304699930</td><td rowspan="1">789</td></tr><tr class="passedeven"><td><a href="#m3">verifycorrectUserNameandwrongPassword</a></td><td rowspan="1">1695304702631</td><td rowspan="1">650</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.obsquara.SevenRMart.SevenRMart#sevenrmartAdminLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.obsquara.SevenRMart.testscript.LoginTest#verifyInvalidUserNameAndInvalidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.obsquara.SevenRMart.testscript.LoginTest#verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.obsquara.SevenRMart.testscript.LoginTest#verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.obsquara.SevenRMart.testscript.LoginTest#verifycorrectUserNameandwrongPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
