--- a/SevenRMart/test-output/index.html
+++ b/SevenRMart/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1116360497\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1539864641\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.SevenRMart" class="method navigator-link" hash-for-method="sevenrmartAdminLogin">sevenrmartAdminLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.LoginTest" class="method navigator-link" hash-for-method="verifyInvalidUserNameAndInvalidPassword">verifyInvalidUserNameAndInvalidPassword</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.LoginTest" class="method navigator-link" hash-for-method="verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword">verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.LoginTest" class="method navigator-link" hash-for-method="verifyUserIsAbleToLoginWithCorrectUserNameAndPassword">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.LoginTest" class="method navigator-link" hash-for-method="verifycorrectUserNameandwrongPassword">verifycorrectUserNameandwrongPassword</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +137,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.obsquara.SevenRMart.SevenRMart</span>
+              <span class="class-name">com.obsquara.SevenRMart.testscript.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="sevenrmartAdminLogin">
-                  </a> <!-- sevenrmartAdminLogin -->
-                  <span class="method-name">sevenrmartAdminLogin</span>
+                  <a name="verifyInvalidUserNameAndInvalidPassword">
+                  </a> <!-- verifyInvalidUserNameAndInvalidPassword -->
+                  <span class="method-name">verifyInvalidUserNameAndInvalidPassword</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword">
+                  </a> <!-- verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword -->
+                  <span class="method-name">verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUserIsAbleToLoginWithCorrectUserNameAndPassword">
+                  </a> <!-- verifyUserIsAbleToLoginWithCorrectUserNameAndPassword -->
+                  <span class="method-name">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifycorrectUserNameandwrongPassword">
+                  </a> <!-- verifycorrectUserNameandwrongPassword -->
+                  <span class="method-name">verifycorrectUserNameandwrongPassword</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1116360497\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1539864641\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +182,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.obsquara.SevenRMart.SevenRMart&quot;/&gt;
+      &lt;class name=&quot;com.obsquara.SevenRMart.testscript.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'sevenrmartAdminLogin')
-data.setCell(0, 2, 'com.obsquara.SevenRMart.SevenRMart')
-data.setCell(0, 3, 940);
+data.setCell(0, 1, 'verifyInvalidUserNameAndInvalidPassword')
+data.setCell(0, 2, 'com.obsquara.SevenRMart.testscript.LoginTest')
+data.setCell(0, 3, 891);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyUserIsAbleToLoginWithCorrectUserNameAndPassword')
+data.setCell(1, 2, 'com.obsquara.SevenRMart.testscript.LoginTest')
+data.setCell(1, 3, 789);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifycorrectUserNameandwrongPassword')
+data.setCell(2, 2, 'com.obsquara.SevenRMart.testscript.LoginTest')
+data.setCell(2, 3, 650);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword')
+data.setCell(3, 2, 'com.obsquara.SevenRMart.testscript.LoginTest')
+data.setCell(3, 3, 627);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 940 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +269,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.obsquara.SevenRMart.SevenRMart</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.obsquara.SevenRMart.testscript.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">instilBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">sevenrmartAdminLogin</span>
-                <span class="method-start">3369 ms</span>
+                <span class="method-name">verifyInvalidUserNameAndInvalidPassword</span>
+                <span class="method-start">3796 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">driverCloseOrQuit</span>
-                <span class="method-start">4314 ms</span>
+                <span class="method-start">4691 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">instilBrowser</span>
+                <span class="method-start">5012 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</span>
+                <span class="method-start">6870 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">driverCloseOrQuit</span>
+                <span class="method-start">7499 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">instilBrowser</span>
+                <span class="method-start">7822 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</span>
+                <span class="method-start">10014 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">driverCloseOrQuit</span>
+                <span class="method-start">10804 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">instilBrowser</span>
+                <span class="method-start">11095 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifycorrectUserNameandwrongPassword</span>
+                <span class="method-start">12715 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">driverCloseOrQuit</span>
+                <span class="method-start">13367 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
