--- a/SevenRMart/test-output/old/Default suite/classes.html
+++ b/SevenRMart/test-output/old/Default suite/classes.html
@@ -4,14 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.SevenRMart</td>
+<td>com.obsquara.SevenRMart.testscript.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>sevenrmartAdminLogin</td>
+<td>verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyInvalidUserNameAndInvalidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifycorrectUserNameandwrongPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
