--- a/SeleniumTestNG/test-output/old/Default suite/classes.html
+++ b/SeleniumTestNG/test-output/old/Default suite/classes.html
@@ -4,30 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SeleniumTestNG.TestcasesObsquara</td>
+<td>com.obsquara.SeleniumTestNG.PopUp</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>idButtonTestcase</td>
+<td>popup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>cssSelectorTestcase</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>classAndId</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyShowButtonAlignment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>xpathTestcase</td>
+<td>alertmet</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
