--- a/SeleniumTestNG/test-output/old/Default suite/methods-not-run.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.obsquara.SeleniumTestNG.TestcasesObsquara.classAndId</td></tr>
-<tr><td>com.obsquara.SeleniumTestNG.TestcasesObsquara.verifyShowButtonAlignment</td></tr>
-<tr><td>com.obsquara.SeleniumTestNG.TestcasesObsquara.idButtonTestcase</td></tr>
-<tr><td>com.obsquara.SeleniumTestNG.TestcasesObsquara.cssSelectorTestcase</td></tr>
+<tr><td>com.obsquara.SeleniumTestNG.PopUp.popup</td></tr>
 </table>
