--- a/SevenRMart/test-output/old/Default suite/classes.html
+++ b/SevenRMart/test-output/old/Default suite/classes.html
@@ -4,26 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.testscript.LoginTest</td>
+<td>com.obsquara.SevenRMart.testscript.AdminUsersTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyInvalidUserNameAndInvalidPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifycorrectUserNameandwrongPassword</td>
+<td>verifythesearchofAdminuserspage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
