--- a/SevenRMart/test-output/old/Default suite/methods-alphabetical.html
+++ b/SevenRMart/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:21</td>   <td>-2271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:21</td>   <td>-2271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:21</td>   <td>-2271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>23/09/21 19:28:21</td>   <td>-2271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/21 19:28:13</td>   <td>-9571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyInvalidUserNameAndInvalidPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">verifyInvalidUserNameAndInvalidPassword</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/21 19:28:16</td>   <td>-6497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">verifyUserIsAbleTOLoginWithWrongUserNameAndCorrectPassword</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/21 19:28:19</td>   <td>-3353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/21 19:28:22</td>   <td>-652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@409bf450]">verifycorrectUserNameandwrongPassword</td> 
-  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>23/09/24 22:17:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>23/09/24 22:17:04</td>   <td>-6149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/09/24 22:17:08</td>   <td>-2334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTest.verifythesearchofAdminuserspage()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">verifythesearchofAdminuserspage</td> 
+  <td>main@1725008249</td>   <td></td> </tr>
 </table>
