--- a/SevenRMart/test-output/old/Default suite/methods.html
+++ b/SevenRMart/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="908cc0">  <td>23/09/24 22:17:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTest.verifythesearchofAdminuserspage()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">verifythesearchofAdminuserspage</td> 
+<tr bgcolor="b66d96">  <td>23/09/28 23:46:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@49e53c76]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>23/09/28 23:47:01</td>   <td>6354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/09/28 23:46:58</td>   <td>3317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerSliderTest.entersliderinformationinmanagersliderpage()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@49e53c76]">entersliderinformationinmanagersliderpage</td> 
   <td>main@1725008249</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/24 22:17:04</td>   <td>-3815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/24 22:17:11</td>   <td>2334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@49e53c76]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1725008249</td>   <td></td> </tr>
 </table>
