--- a/SeleniumTestNG/test-output/index.html
+++ b/SeleniumTestNG/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--584123809\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-171555889\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SeleniumTestNG.PopUp" class="method navigator-link" hash-for-method="alertmet">alertmet</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SeleniumTestNG.FileUpload" class="method navigator-link" hash-for-method="fileUploadSample">fileUploadSample</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.obsquara.SeleniumTestNG.PopUp</span>
+              <span class="class-name">com.obsquara.SeleniumTestNG.FileUpload</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="alertmet">
-                  </a> <!-- alertmet -->
-                  <span class="method-name">alertmet</span>
+                  <a name="fileUploadSample">
+                  </a> <!-- fileUploadSample -->
+                  <span class="method-name">fileUploadSample</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--584123809\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-171555889\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.obsquara.SeleniumTestNG.PopUp&quot;&gt;
+      &lt;class name=&quot;com.obsquara.SeleniumTestNG.FileUpload&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;alertmet&quot;/&gt;
+          &lt;include name=&quot;fileUploadSample&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.obsquara.SeleniumTestNG.PopUp --&gt;
+      &lt;/class&gt; &lt;!-- com.obsquara.SeleniumTestNG.FileUpload --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'alertmet')
-data.setCell(0, 2, 'com.obsquara.SeleniumTestNG.PopUp')
-data.setCell(0, 3, 801);
+data.setCell(0, 1, 'fileUploadSample')
+data.setCell(0, 2, 'com.obsquara.SeleniumTestNG.FileUpload')
+data.setCell(0, 3, 2575);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 801 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,16 +214,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.obsquara.SeleniumTestNG.PopUp</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">popup</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -232,18 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.obsquara.SeleniumTestNG.PopUp</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.obsquara.SeleniumTestNG.FileUpload</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">instilBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">alertmet</span>
-                <span class="method-start">5456 ms</span>
+                <span class="method-name">fileUploadSample</span>
+                <span class="method-start">6178 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">driverCloseOrQuit</span>
-                <span class="method-start">6262 ms</span>
+                <span class="method-start">8759 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
