--- a/SeleniumTestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumTestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f71a9">  <td>23/09/24 23:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PopUp.alertmet()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">alertmet</td> 
-  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/24 23:50:56</td>   <td>808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/09/24 23:50:50</td>   <td>-5453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.PopUp@689604d9]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/28 18:15:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SeleniumTestNG.FileUpload@35d019a3]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/09/28 18:15:19</td>   <td>-2582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileUpload.fileUploadSample()[pri:0, instance:com.obsquara.SeleniumTestNG.FileUpload@35d019a3]">fileUploadSample</td> 
+  <td>main@2106000623</td>   <td></td> </tr>
+<tr bgcolor="a697e7">  <td>23/09/28 18:15:13</td>   <td>-8757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SeleniumTestNG.FileUpload@35d019a3]">&gt;&gt;instilBrowser</td> 
+<td>&nbsp;</td>  <td>main@2106000623</td>   <td></td> </tr>
 </table>
