--- a/SevenRMart/test-output/old/Suite/classes.html
+++ b/SevenRMart/test-output/old/Suite/classes.html
@@ -4,26 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.testscript.LoginTest</td>
+<td>com.obsquara.SevenRMart.testscript.ManagerSliderTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyInvalidUserNameAndInvalidPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifycorrectUserNameandwrongPassword</td>
+<td>entersliderinformationinmanagersliderpage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -33,14 +21,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>instilBrowser</td>
+<td>intializeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>driverCloseOrQuit</td>
+<td>driverQuit</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
