--- a/SevenRMart/test-output/old/Suite/methods-alphabetical.html
+++ b/SevenRMart/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66d96">  <td>23/09/27 10:28:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1781493632</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/27 10:28:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1781493632</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/27 10:28:37</td>   <td>-2185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@1781493632</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>23/09/27 10:28:37</td>   <td>-2185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.instilBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">&gt;&gt;instilBrowser</td> 
-<td>&nbsp;</td>  <td>main@1781493632</td>   <td></td> </tr>
-<tr bgcolor="908cc0">  <td>23/09/27 10:28:34</td>   <td>-4469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td> 
-  <td>main@1781493632</td>   <td></td> </tr>
-<tr bgcolor="908cc0">  <td>23/09/27 10:28:38</td>   <td>-542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@689604d9]">verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword</td> 
-  <td>main@1781493632</td>   <td></td> </tr>
+<tr bgcolor="94d6b9">  <td>23/10/03 08:35:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">&lt;&lt;driverQuit</td> 
+<td>&nbsp;</td>  <td>main@372469954</td>   <td></td> </tr>
+<tr bgcolor="a06a77">  <td>23/10/03 08:35:39</td>   <td>-4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerSliderTest.entersliderinformationinmanagersliderpage()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">entersliderinformationinmanagersliderpage</td> 
+  <td>main@372469954</td>   <td></td> </tr>
+<tr bgcolor="94d6b9">  <td>23/10/03 08:35:36</td>   <td>-7817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@372469954</td>   <td></td> </tr>
 </table>
