--- a/SevenRMart/test-output/old/Suite/groups.html
+++ b/SevenRMart/test-output/old/Suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]<br/>LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]<br/></td></tr>
-<tr><td>smoke</td><td>LoginTest.verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]<br/>LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]<br/>LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]<br/></td></tr>
+<tr><td>smoke</td><td>LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]<br/></td></tr>
 </table>
