--- a/SevenRMart/test-output/old/Default suite/classes.html
+++ b/SevenRMart/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.testscript.CatagoryTest</td>
+<td>com.obsquara.SevenRMart.testscript.LogoutTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAbleToDeleteTheItemInCateogryList</td>
-<td>regression </td>
-</tr>
+<td>verifyTheAdminLogout</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
