--- a/SevenRMart/test-output/old/Default suite/groups.html
+++ b/SevenRMart/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>CatagoryTest.verifyAbleToDeleteTheItemInCateogryList()[pri:0, instance:com.obsquara.SevenRMart.testscript.CatagoryTest@14cd1699]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
