--- a/SevenRMart/test-output/old/Suite/methods.html
+++ b/SevenRMart/test-output/old/Suite/methods.html
@@ -1,34 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>23/10/08 23:07:36</td>   <td>1799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">verifycorrectUserNameandwrongPassword</td> 
-  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:38</td>   <td>2973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@311bf055]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>23/10/08 23:07:30</td>   <td>-4408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td> 
-  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:37</td>   <td>2704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>23/10/08 23:07:27</td>   <td>-7393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyInvalidUserNameAndInvalidPassword(java.lang.String,java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">verifyInvalidUserNameAndInvalidPassword</td> 
-  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:41</td>   <td>6662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@311bf055]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:37</td>   <td>2704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:37</td>   <td>2704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:37</td>   <td>2704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>23/10/08 23:07:33</td>   <td>-1194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">verifyUserIsUnableTOLoginWithWrongUserNameAndCorrectPassword</td> 
-  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="698dc7">  <td>23/10/08 23:07:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@14dd7b39]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@968113504</td>   <td></td> </tr>
-<tr bgcolor="a37671">  <td>23/10/08 23:07:40</td>   <td>5013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.verifyTheAdminLogout(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@311bf055]">verifyTheAdminLogout</td> 
-  <td>main@968113504</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/12/06 11:55:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserIsAbleToLoginWithCorrectUserNameAndPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]">verifyUserIsAbleToLoginWithCorrectUserNameAndPassword</td> 
+  <td>main@1620823990</td>   <td></td> </tr>
+<tr bgcolor="b1b3e0">  <td>23/12/06 11:55:34</td>   <td>2491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1620823990</td>   <td></td> </tr>
+<tr bgcolor="b1b3e0">  <td>23/12/06 11:55:34</td>   <td>2491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1620823990</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/12/06 11:55:37</td>   <td>5425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifycorrectUserNameandwrongPassword()[pri:0, instance:com.obsquara.SevenRMart.testscript.LoginTest@51891008]">verifycorrectUserNameandwrongPassword</td> 
+  <td>main@1620823990</td>   <td></td> </tr>
 </table>
